--- a/Basic Stats.ipynb
+++ b/Basic Stats.ipynb
@@ -278,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Offset, what is called a good quality detection\n",
-    "delta = 0 #127\n",
+    "delta = 256/4 #127\n",
     "\n",
     "counter = 0\n",
     "for det in detections:\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -312,8 +312,8 @@
      "output_type": "stream",
      "text": [
       "90395\n",
-      "38374\n",
-      "42.45146302339731\n"
+      "74163\n",
+      "82.04325460479009\n"
      ]
     }
    ],
