some pipeline stuff

--- a/01_KleineStatistischeAnalyse/zz Number of Detections_OLD.ipynb
+++ b/01_KleineStatistischeAnalyse/zz Number of Detections_OLD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,35 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# repo = Repository('../00_Data/data-6minutes-cam1')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# repo = Repository('../00_Data/1day')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "repo = Repository('../00_Data/1h')"
+    "repo = Repository('../00_Data/testset_2015_1h/2015082215')"
    ]
   },
   {
