Added some notedbooks

--- a/01_KleineStatistischeAnalyse/03 Abstaende zwischen den Bienen (pro Kamera).ipynb
+++ b/01_KleineStatistischeAnalyse/03 Abstaende zwischen den Bienen (pro Kamera).ipynb
@@ -76,7 +76,9 @@
     "            df = pd.concat([df, det])\n",
     "    \n",
     "    df.drop(['descriptor', 'localizerSaliency', 'xposHive', 'yposHive', 'xRotation', 'yRotation'], axis=1, inplace=True)\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "    df['id'] = df.decodedId.apply(get_detected_id)"
    ]
   },
   {
@@ -129,11 +131,13 @@
    "outputs": [],
    "source": [
     "def print_stat_ids(df, f):\n",
-    "    df['id'] = df.decodedId.apply(get_detected_id)\n",
     "    print(f)\n",
-    "    print(\"Number of Detections: {}\".format(df.shape[0]))\n",
+    "    alldet = df.shape[0]\n",
     "    df = df.dropna()\n",
-    "    print(\"Number of dropping na values: {}\".format(df.shape[0]))\n"
+    "    dopeddet = df.shape[0]\n",
+    "    print(\"Number of Detections: {}\".format(alldet))\n",
+    "    print(\"Number of dropping na values: {}\".format(dopeddet))\n",
+    "    print(\"Percent: {}\". format(dopeddet*100/alldet)"
    ]
   },
   {
@@ -165,33 +169,6 @@
     "    df = createDF(r, f)\n",
     "    print_stat_ids(df,f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
