--- a/pipeline_parallel_slices.ipynb
+++ b/pipeline_parallel_slices.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -23,9 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -46,14 +37,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a network for a given folder"
+    "# Create netwok slices with windowsize for folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -93,9 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -104,9 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -115,27 +106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "tasks = []\n",
+    "tasks_files = []\n",
     "\n",
     "for e, f in enumerate(files):\n",
-    "    tasks.append((e, f, confidence, distance, ilen))"
+    "    tasks_files.append((e, f, confidence, distance, ilen))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def generate_network(index, file_list, confidence=.95, distance=160, ilen=3 ):\n",
+    "def generate_timeseries(index, file_list, confidence=.95, distance=160, ilen=3 ):\n",
     "    \n",
     "    xmax = 3000\n",
     "    \n",
@@ -146,106 +137,49 @@
     "        fc = load_frame_container(file_list[i])\n",
     "        df = prep.get_dataframe2(fc)\n",
     "        df = prep.calcIds(df,confidence)\n",
+    "        df = prep.calcIds(df,CONFIDENCE)\n",
+    "        df['frame_idx'] = df['frame_idx'] + index*1024\n",
     "\n",
     "        camIdx = int(file_list[i].split(\"/\")[-1].split(\"_\")[1])\n",
     "        dataframes[camIdx] = df\n",
-    "\n",
-    "    # cam 0 und cam1 nach rechts verschieben\n",
-    "    dataframes[0].xpos = dataframes[0].xpos + xmax\n",
-    "    dataframes[1].xpos = dataframes[1].xpos + xmax\n",
-    "\n",
-    "    # Seiten zusammenfugen\n",
-    "    side0 = pd.concat([dataframes[3], dataframes[0]])\n",
-    "    side1 = pd.concat([dataframes[2], dataframes[1]])\n",
-    "\n",
-    "    close1 = prep.get_close_bees_ckd(side0, distance)\n",
-    "    close2 = prep.get_close_bees_ckd(side1, distance)\n",
-    "\n",
-    "    close = pd.concat([close1,close2])\n",
-    "\n",
-    "    p = prep.bee_pairs_to_timeseries(close)\n",
     "    \n",
-    "    return prep.extract_interactions(p,ilen)"
+    "    return dataframes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "results = [pool.apply_async( generate_network, t ) for t in tasks]"
+    "results = [pool.apply_async( generate_timeseries, t ) for t in tasks]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "edges = []"
+    "dataframes = [DataFrame(), DataFrame(), DataFrame(), DataFrame()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "for result in results:\n",
-    "    edges.append(result.get())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: \n",
-      "Type: Graph\n",
-      "Number of nodes: 936\n",
-      "Number of edges: 26937\n",
-      "Average degree:  57.5577\n"
-     ]
-    }
-   ],
-   "source": [
-    "G = prep.create_graph2(pd.concat(edges))\n",
-    "print(nx.info(G))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5120"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5*1024"
+    "    df_list = result.get()\n",
+    "    for e, df in enumerate(df_list):\n",
+    "        dataframes[e] = pd.concat([dataframes[e], df])"
    ]
   },
   {
