--- a/Basic Stats.ipynb
+++ b/Basic Stats.ipynb
@@ -405,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
