--- a/Positions on Honeycomb.ipynb
+++ b/Positions on Honeycomb.ipynb
@@ -1496,7 +1496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
