--- a/bib/Matching Communities.ipynb
+++ b/bib/Matching Communities.ipynb
@@ -1119,513 +1119,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 240,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-05T23:51:54.241679",
-     "start_time": "2017-02-05T23:51:54.118128"
+     "end_time": "2017-02-07T12:44:35.226750",
+     "start_time": "2017-02-07T12:44:35.207727"
     },
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(0, 0, 0.6519721577726219),\n",
-       " (0, 1, 0.005442176870748299),\n",
-       " (0, 2, 0.005442176870748299),\n",
-       " (0, 3, 0.005442176870748299),\n",
-       " (0, 4, 0.005442176870748299),\n",
-       " (0, 5, 0.00816326530612245),\n",
-       " (0, 6, 0.005442176870748299),\n",
-       " (0, 7, 0.005434782608695652),\n",
-       " (0, 8, 0.009497964721845319),\n",
-       " (0, 9, 0.004076086956521739),\n",
-       " (0, 10, 0.006802721088435374),\n",
-       " (0, 11, 0.004070556309362279),\n",
-       " (0, 12, 0.004070556309362279),\n",
-       " (0, 13, 0.005442176870748299),\n",
-       " (0, 14, 0.009523809523809525),\n",
-       " (0, 15, 0.005442176870748299),\n",
-       " (0, 16, 0.004076086956521739),\n",
-       " (0, 17, 0.004070556309362279),\n",
-       " (0, 18, 0.005434782608695652),\n",
-       " (0, 19, 0.004076086956521739),\n",
-       " (0, 20, 0.006802721088435374),\n",
-       " (0, 21, 0.005442176870748299),\n",
-       " (0, 22, 0.005442176870748299),\n",
-       " (0, 23, 0.0027137042062415195),\n",
-       " (0, 24, 0.004076086956521739),\n",
-       " (0, 25, 0.005442176870748299),\n",
-       " (0, 26, 0.005442176870748299),\n",
-       " (0, 27, 0.004076086956521739),\n",
-       " (0, 28, 0.005442176870748299),\n",
-       " (0, 29, 0.005434782608695652),\n",
-       " (0, 30, 0.004076086956521739),\n",
-       " (0, 31, 0.005442176870748299),\n",
-       " (0, 32, 0.004076086956521739),\n",
-       " (0, 33, 0.005442176870748299),\n",
-       " (0, 34, 0.005442176870748299),\n",
-       " (0, 35, 0.0027137042062415195),\n",
-       " (0, 36, 0.004076086956521739),\n",
-       " (0, 37, 0.005442176870748299),\n",
-       " (0, 38, 0.005442176870748299),\n",
-       " (0, 39, 0.005442176870748299),\n",
-       " (0, 40, 0.005442176870748299),\n",
-       " (0, 41, 0.005442176870748299),\n",
-       " (0, 42, 0.005427408412483039),\n",
-       " (0, 43, 0.004076086956521739),\n",
-       " (0, 44, 0.005442176870748299),\n",
-       " (0, 45, 0.005442176870748299),\n",
-       " (0, 46, 0.005442176870748299),\n",
-       " (0, 47, 0.004076086956521739),\n",
-       " (0, 48, 0.004076086956521739),\n",
-       " (0, 49, 0.004076086956521739),\n",
-       " (0, 50, 0.0027137042062415195),\n",
-       " (0, 51, 0.0027137042062415195),\n",
-       " (0, 52, 0.005442176870748299),\n",
-       " (0, 53, 0.004076086956521739),\n",
-       " (0, 54, 0.004076086956521739),\n",
-       " (0, 55, 0.005442176870748299),\n",
-       " (0, 56, 0.005434782608695652),\n",
-       " (0, 57, 0.005442176870748299),\n",
-       " (0, 58, 0.004076086956521739),\n",
-       " (0, 59, 0.0027137042062415195),\n",
-       " (0, 60, 0.004076086956521739),\n",
-       " (0, 61, 0.005442176870748299),\n",
-       " (0, 62, 0.005442176870748299),\n",
-       " (0, 63, 0.005442176870748299),\n",
-       " (0, 64, 0.005442176870748299),\n",
-       " (0, 65, 0.004076086956521739),\n",
-       " (0, 66, 0.005442176870748299),\n",
-       " (0, 67, 0.005442176870748299),\n",
-       " (0, 68, 0.0027137042062415195),\n",
-       " (0, 69, 0.0027137042062415195),\n",
-       " (0, 70, 0.004076086956521739),\n",
-       " (0, 71, 0.006802721088435374),\n",
-       " (0, 72, 0.0027137042062415195),\n",
-       " (0, 73, 0.005442176870748299),\n",
-       " (0, 74, 0.004076086956521739),\n",
-       " (0, 75, 0.006802721088435374),\n",
-       " (0, 76, 0.004076086956521739),\n",
-       " (0, 77, 0.005442176870748299),\n",
-       " (0, 78, 0.004076086956521739),\n",
-       " (0, 79, 0.004076086956521739),\n",
-       " (0, 80, 0.005442176870748299),\n",
-       " (0, 81, 0.004076086956521739),\n",
-       " (0, 82, 0.005434782608695652),\n",
-       " (0, 83, 0.004076086956521739),\n",
-       " (0, 84, 0.004076086956521739),\n",
-       " (0, 85, 0.004070556309362279),\n",
-       " (0, 86, 0.004070556309362279),\n",
-       " (0, 87, 0.004076086956521739),\n",
-       " (0, 88, 0.0027137042062415195),\n",
-       " (0, 89, 0.0027100271002710027),\n",
-       " (0, 90, 0.004076086956521739),\n",
-       " (0, 91, 0.005442176870748299),\n",
-       " (0, 92, 0.006802721088435374),\n",
-       " (0, 93, 0.005442176870748299),\n",
-       " (0, 94, 0.004076086956521739),\n",
-       " (0, 95, 0.005442176870748299),\n",
-       " (0, 96, 0.006802721088435374),\n",
-       " (0, 97, 0.005442176870748299),\n",
-       " (0, 98, 0.005442176870748299),\n",
-       " (0, 99, 0.006802721088435374),\n",
-       " (0, 100, 0.004076086956521739),\n",
-       " (0, 101, 0.004076086956521739),\n",
-       " (0, 102, 0.004076086956521739),\n",
-       " (0, 103, 0.0027137042062415195),\n",
-       " (0, 104, 0.005442176870748299),\n",
-       " (0, 105, 0.005442176870748299),\n",
-       " (0, 106, 0.005442176870748299),\n",
-       " (0, 107, 0.005442176870748299),\n",
-       " (0, 108, 0.005442176870748299),\n",
-       " (0, 109, 0.005442176870748299),\n",
-       " (0, 110, 0.005442176870748299),\n",
-       " (0, 111, 0.009523809523809525),\n",
-       " (0, 112, 0.005442176870748299),\n",
-       " (0, 113, 0.004076086956521739),\n",
-       " (0, 114, 0.005442176870748299),\n",
-       " (0, 115, 0.004076086956521739),\n",
-       " (0, 116, 0.006793478260869565),\n",
-       " (0, 117, 0.004076086956521739),\n",
-       " (0, 118, 0.004076086956521739),\n",
-       " (0, 119, 0.004076086956521739),\n",
-       " (0, 120, 0.005442176870748299),\n",
-       " (0, 121, 0.005442176870748299),\n",
-       " (0, 122, 0.005442176870748299),\n",
-       " (0, 123, 0.005442176870748299),\n",
-       " (0, 124, 0.005442176870748299),\n",
-       " (0, 125, 0.004076086956521739),\n",
-       " (0, 126, 0.004076086956521739),\n",
-       " (0, 127, 0.0027137042062415195),\n",
-       " (0, 128, 0.004076086956521739),\n",
-       " (0, 129, 0.004076086956521739),\n",
-       " (0, 130, 0.005442176870748299),\n",
-       " (0, 131, 0.005442176870748299),\n",
-       " (0, 132, 0.004076086956521739),\n",
-       " (0, 133, 0.004076086956521739),\n",
-       " (0, 134, 0.004076086956521739),\n",
-       " (0, 135, 0.005442176870748299),\n",
-       " (0, 136, 0.004076086956521739),\n",
-       " (0, 137, 0.005442176870748299),\n",
-       " (0, 138, 0.0027137042062415195),\n",
-       " (0, 139, 0.0027137042062415195),\n",
-       " (0, 140, 0.004076086956521739),\n",
-       " (0, 141, 0.004076086956521739),\n",
-       " (0, 142, 0.005442176870748299),\n",
-       " (0, 143, 0.005442176870748299),\n",
-       " (1, 0, 0.005805515239477504),\n",
-       " (1, 1, 0.0),\n",
-       " (1, 2, 0.14285714285714285),\n",
-       " (1, 3, 0.0),\n",
-       " (1, 4, 0.0),\n",
-       " (1, 5, 0.0),\n",
-       " (1, 6, 0.0),\n",
-       " (1, 7, 0.0),\n",
-       " (1, 8, 0.0),\n",
-       " (1, 9, 0.0),\n",
-       " (1, 10, 0.0),\n",
-       " (1, 11, 0.0),\n",
-       " (1, 12, 0.0),\n",
-       " (1, 13, 0.0),\n",
-       " (1, 14, 0.0),\n",
-       " (1, 15, 0.0),\n",
-       " (1, 16, 0.0),\n",
-       " (1, 17, 0.0),\n",
-       " (1, 18, 0.0),\n",
-       " (1, 19, 0.14285714285714285),\n",
-       " (1, 20, 0.0),\n",
-       " (1, 21, 0.0),\n",
-       " (1, 22, 0.14285714285714285),\n",
-       " (1, 23, 0.0),\n",
-       " (1, 24, 0.0),\n",
-       " (1, 25, 0.14285714285714285),\n",
-       " (1, 26, 0.0),\n",
-       " (1, 27, 0.0),\n",
-       " (1, 28, 0.0),\n",
-       " (1, 29, 0.0),\n",
-       " (1, 30, 0.0),\n",
-       " (1, 31, 0.0),\n",
-       " (1, 32, 0.0),\n",
-       " (1, 33, 0.0),\n",
-       " (1, 34, 0.0),\n",
-       " (1, 35, 0.0),\n",
-       " (1, 36, 0.0),\n",
-       " (1, 37, 0.0),\n",
-       " (1, 38, 0.0),\n",
-       " (1, 39, 0.0),\n",
-       " (1, 40, 0.0),\n",
-       " (1, 41, 0.0),\n",
-       " (1, 42, 0.0),\n",
-       " (1, 43, 0.0),\n",
-       " (1, 44, 0.0),\n",
-       " (1, 45, 0.0),\n",
-       " (1, 46, 0.0),\n",
-       " (1, 47, 0.0),\n",
-       " (1, 48, 0.0),\n",
-       " (1, 49, 0.0),\n",
-       " (1, 50, 0.0),\n",
-       " (1, 51, 0.0),\n",
-       " (1, 52, 0.0),\n",
-       " (1, 53, 0.0),\n",
-       " (1, 54, 0.0),\n",
-       " (1, 55, 0.0),\n",
-       " (1, 56, 0.0),\n",
-       " (1, 57, 0.0),\n",
-       " (1, 58, 0.0),\n",
-       " (1, 59, 0.14285714285714285),\n",
-       " (1, 60, 0.0),\n",
-       " (1, 61, 0.0),\n",
-       " (1, 62, 0.14285714285714285),\n",
-       " (1, 63, 0.0),\n",
-       " (1, 64, 0.14285714285714285),\n",
-       " (1, 65, 0.0),\n",
-       " (1, 66, 0.0),\n",
-       " (1, 67, 0.0),\n",
-       " (1, 68, 0.0),\n",
-       " (1, 69, 0.0),\n",
-       " (1, 70, 0.0),\n",
-       " (1, 71, 0.0),\n",
-       " (1, 72, 0.0),\n",
-       " (1, 73, 0.0),\n",
-       " (1, 74, 0.0),\n",
-       " (1, 75, 0.0),\n",
-       " (1, 76, 0.0),\n",
-       " (1, 77, 0.0),\n",
-       " (1, 78, 0.0),\n",
-       " (1, 79, 0.0),\n",
-       " (1, 80, 0.0),\n",
-       " (1, 81, 0.0),\n",
-       " (1, 82, 0.0),\n",
-       " (1, 83, 0.0),\n",
-       " (1, 84, 0.0),\n",
-       " (1, 85, 0.0),\n",
-       " (1, 86, 0.0),\n",
-       " (1, 87, 0.0),\n",
-       " (1, 88, 0.0),\n",
-       " (1, 89, 0.0),\n",
-       " (1, 90, 0.0),\n",
-       " (1, 91, 0.0),\n",
-       " (1, 92, 0.125),\n",
-       " (1, 93, 0.0),\n",
-       " (1, 94, 0.0),\n",
-       " (1, 95, 0.0),\n",
-       " (1, 96, 0.0),\n",
-       " (1, 97, 0.0),\n",
-       " (1, 98, 0.0),\n",
-       " (1, 99, 0.0),\n",
-       " (1, 100, 0.0),\n",
-       " (1, 101, 0.0),\n",
-       " (1, 102, 0.0),\n",
-       " (1, 103, 0.0),\n",
-       " (1, 104, 0.0),\n",
-       " (1, 105, 0.14285714285714285),\n",
-       " (1, 106, 0.0),\n",
-       " (1, 107, 0.0),\n",
-       " (1, 108, 0.0),\n",
-       " (1, 109, 0.0),\n",
-       " (1, 110, 0.0),\n",
-       " (1, 111, 0.0),\n",
-       " (1, 112, 0.0),\n",
-       " (1, 113, 0.0),\n",
-       " (1, 114, 0.0),\n",
-       " (1, 115, 0.0),\n",
-       " (1, 116, 0.0),\n",
-       " (1, 117, 0.0),\n",
-       " (1, 118, 0.0),\n",
-       " (1, 119, 0.0),\n",
-       " (1, 120, 0.0),\n",
-       " (1, 121, 0.0),\n",
-       " (1, 122, 0.0),\n",
-       " (1, 123, 0.0),\n",
-       " (1, 124, 0.0),\n",
-       " (1, 125, 0.0),\n",
-       " (1, 126, 0.0),\n",
-       " (1, 127, 0.0),\n",
-       " (1, 128, 0.0),\n",
-       " (1, 129, 0.0),\n",
-       " (1, 130, 0.0),\n",
-       " (1, 131, 0.0),\n",
-       " (1, 132, 0.0),\n",
-       " (1, 133, 0.0),\n",
-       " (1, 134, 0.0),\n",
-       " (1, 135, 0.0),\n",
-       " (1, 136, 0.0),\n",
-       " (1, 137, 0.0),\n",
-       " (1, 138, 0.0),\n",
-       " (1, 139, 0.0),\n",
-       " (1, 140, 0.0),\n",
-       " (1, 141, 0.0),\n",
-       " (1, 142, 0.0),\n",
-       " (1, 143, 0.0),\n",
-       " (2, 0, 0.008708272859216255),\n",
-       " (2, 1, 0.0),\n",
-       " (2, 2, 0.0),\n",
-       " (2, 3, 0.0),\n",
-       " (2, 4, 0.0),\n",
-       " (2, 5, 0.0),\n",
-       " (2, 6, 0.0),\n",
-       " (2, 7, 0.0),\n",
-       " (2, 8, 0.0),\n",
-       " (2, 9, 0.0),\n",
-       " (2, 10, 0.0),\n",
-       " (2, 11, 0.0),\n",
-       " (2, 12, 0.0),\n",
-       " (2, 13, 0.0),\n",
-       " (2, 14, 0.0),\n",
-       " (2, 15, 0.0),\n",
-       " (2, 16, 0.0),\n",
-       " (2, 17, 0.0),\n",
-       " (2, 18, 0.0),\n",
-       " (2, 19, 0.0),\n",
-       " (2, 20, 0.0),\n",
-       " (2, 21, 0.0),\n",
-       " (2, 22, 0.0),\n",
-       " (2, 23, 0.0),\n",
-       " (2, 24, 0.0),\n",
-       " (2, 25, 0.0),\n",
-       " (2, 26, 0.0),\n",
-       " (2, 27, 0.0),\n",
-       " (2, 28, 0.0),\n",
-       " (2, 29, 0.0),\n",
-       " (2, 30, 0.0),\n",
-       " (2, 31, 0.0),\n",
-       " (2, 32, 0.0),\n",
-       " (2, 33, 0.1111111111111111),\n",
-       " (2, 34, 0.0),\n",
-       " (2, 35, 0.0),\n",
-       " (2, 36, 0.0),\n",
-       " (2, 37, 0.0),\n",
-       " (2, 38, 0.0),\n",
-       " (2, 39, 0.0),\n",
-       " (2, 40, 0.0),\n",
-       " (2, 41, 0.1111111111111111),\n",
-       " (2, 42, 0.0),\n",
-       " (2, 43, 0.0),\n",
-       " (2, 44, 0.0),\n",
-       " (2, 45, 0.0),\n",
-       " (2, 46, 0.0),\n",
-       " (2, 47, 0.0),\n",
-       " (2, 48, 0.0),\n",
-       " (2, 49, 0.0),\n",
-       " (2, 50, 0.0),\n",
-       " (2, 51, 0.0),\n",
-       " (2, 52, 0.0),\n",
-       " (2, 53, 0.0),\n",
-       " (2, 54, 0.0),\n",
-       " (2, 55, 0.0),\n",
-       " (2, 56, 0.0),\n",
-       " (2, 57, 0.0),\n",
-       " (2, 58, 0.0),\n",
-       " (2, 59, 0.0),\n",
-       " (2, 60, 0.0),\n",
-       " (2, 61, 0.0),\n",
-       " (2, 62, 0.1111111111111111),\n",
-       " (2, 63, 0.0),\n",
-       " (2, 64, 0.0),\n",
-       " (2, 65, 0.0),\n",
-       " (2, 66, 0.0),\n",
-       " (2, 67, 0.0),\n",
-       " (2, 68, 0.0),\n",
-       " (2, 69, 0.0),\n",
-       " (2, 70, 0.0),\n",
-       " (2, 71, 0.0),\n",
-       " (2, 72, 0.0),\n",
-       " (2, 73, 0.0),\n",
-       " (2, 74, 0.0),\n",
-       " (2, 75, 0.0),\n",
-       " (2, 76, 0.0),\n",
-       " (2, 77, 0.0),\n",
-       " (2, 78, 0.0),\n",
-       " (2, 79, 0.0),\n",
-       " (2, 80, 0.0),\n",
-       " (2, 81, 0.0),\n",
-       " (2, 82, 0.0),\n",
-       " (2, 83, 0.0),\n",
-       " (2, 84, 0.0),\n",
-       " (2, 85, 0.0),\n",
-       " (2, 86, 0.0),\n",
-       " (2, 87, 0.0),\n",
-       " (2, 88, 0.0),\n",
-       " (2, 89, 0.0),\n",
-       " (2, 90, 0.0),\n",
-       " (2, 91, 0.0),\n",
-       " (2, 92, 0.0),\n",
-       " (2, 93, 0.0),\n",
-       " (2, 94, 0.0),\n",
-       " (2, 95, 0.0),\n",
-       " (2, 96, 0.0),\n",
-       " (2, 97, 0.0),\n",
-       " (2, 98, 0.0),\n",
-       " (2, 99, 0.0),\n",
-       " (2, 100, 0.0),\n",
-       " (2, 101, 0.0),\n",
-       " (2, 102, 0.0),\n",
-       " (2, 103, 0.0),\n",
-       " (2, 104, 0.0),\n",
-       " (2, 105, 0.0),\n",
-       " (2, 106, 0.0),\n",
-       " (2, 107, 0.0),\n",
-       " (2, 108, 0.1111111111111111),\n",
-       " (2, 109, 0.1111111111111111),\n",
-       " (2, 110, 0.0),\n",
-       " (2, 111, 0.08333333333333333),\n",
-       " (2, 112, 0.1111111111111111),\n",
-       " (2, 113, 0.0),\n",
-       " (2, 114, 0.0),\n",
-       " (2, 115, 0.0),\n",
-       " (2, 116, 0.09090909090909091),\n",
-       " (2, 117, 0.0),\n",
-       " (2, 118, 0.0),\n",
-       " (2, 119, 0.0),\n",
-       " (2, 120, 0.0),\n",
-       " (2, 121, 0.0),\n",
-       " (2, 122, 0.0),\n",
-       " (2, 123, 0.0),\n",
-       " (2, 124, 0.0),\n",
-       " (2, 125, 0.0),\n",
-       " (2, 126, 0.0),\n",
-       " (2, 127, 0.0),\n",
-       " (2, 128, 0.0),\n",
-       " (2, 129, 0.0),\n",
-       " (2, 130, 0.0),\n",
-       " (2, 131, 0.0),\n",
-       " (2, 132, 0.0),\n",
-       " (2, 133, 0.0),\n",
-       " (2, 134, 0.0),\n",
-       " (2, 135, 0.0),\n",
-       " (2, 136, 0.0),\n",
-       " (2, 137, 0.0),\n",
-       " (2, 138, 0.1111111111111111),\n",
-       " (2, 139, 0.0),\n",
-       " (2, 140, 0.0),\n",
-       " (2, 141, 0.0),\n",
-       " (2, 142, 0.0),\n",
-       " (2, 143, 0.0),\n",
-       " (3, 0, 0.005797101449275362),\n",
-       " (3, 1, 0.0),\n",
-       " (3, 2, 0.0),\n",
-       " (3, 3, 0.0),\n",
-       " (3, 4, 0.0),\n",
-       " (3, 5, 0.0),\n",
-       " (3, 6, 0.0),\n",
-       " (3, 7, 0.0),\n",
-       " (3, 8, 0.0),\n",
-       " (3, 9, 0.0),\n",
-       " (3, 10, 0.0),\n",
-       " (3, 11, 0.0),\n",
-       " (3, 12, 0.0),\n",
-       " (3, 13, 0.0),\n",
-       " (3, 14, 0.0),\n",
-       " (3, 15, 0.0),\n",
-       " (3, 16, 0.0),\n",
-       " (3, 17, 0.0),\n",
-       " (3, 18, 0.0),\n",
-       " (3, 19, 0.125),\n",
-       " (3, 20, 0.0),\n",
-       " (3, 21, 0.0),\n",
-       " (3, 22, 0.0),\n",
-       " (3, 23, 0.0),\n",
-       " (3, 24, 0.0),\n",
-       " (3, 25, 0.0),\n",
-       " (3, 26, 0.0),\n",
-       " (3, 27, 0.0),\n",
-       " (3, 28, 0.0),\n",
-       " (3, 29, 0.0),\n",
-       " (3, 30, 0.0),\n",
-       " (3, 31, 0.0),\n",
-       " (3, 32, 0.0),\n",
-       " (3, 33, 0.0),\n",
-       " (3, 34, 0.0),\n",
-       " (3, 35, 0.0),\n",
-       " (3, 36, 0.0),\n",
-       " (3, 37, 0.0),\n",
-       " (3, 38, 0.0),\n",
-       " (3, 39, 0.0),\n",
-       " (3, 40, 0.0),\n",
-       " (3, 41, 0.0),\n",
-       " (3, 42, 0.0),\n",
-       " (3,"
-      ]
-     },
-     "execution_count": 231,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<b>limit_output extension: Maximum message size of 10000 exceeded with 18196 characters</b>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0, 0.6519721577726219), (10, 97, 0.3333333333333333), (14, 115, 0.3333333333333333), (14, 141, 0.3333333333333333), (33, 20, 0.25), (54, 45, 0.3333333333333333), (59, 62, 0.2857142857142857), (88, 9, 0.3333333333333333), (88, 41, 0.3333333333333333)]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n"
+     ]
     }
    ],
    "source": [
-    "o[0]"
+    "for i in range(len(o)):\n",
+    "    print([(a,b,c) for a,b,c in o[i] if c > 0.2])"
    ]
   },
   {
