--- a/bib/Test2016.ipynb
+++ b/bib/Test2016.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 138,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-09T00:09:49.244530",
-     "start_time": "2017-02-09T00:09:49.229919"
+     "end_time": "2017-02-09T00:48:05.055416",
+     "start_time": "2017-02-09T00:48:04.741597"
     },
     "collapsed": true
    },
@@ -26,7 +26,23 @@
     "import numpy as np\n",
     "import numpy.ma as npma\n",
     "import datetime\n",
-    "import csv"
+    "import csv\n",
+    "import igraph as ig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:32:45.941074",
+     "start_time": "2017-02-09T00:32:45.929385"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -406,11 +422,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 164,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-09T00:11:18.563516",
-     "start_time": "2017-02-09T00:11:18.372870"
+     "end_time": "2017-02-09T00:58:10.233163",
+     "start_time": "2017-02-09T00:58:09.997939"
     },
     "collapsed": true
    },
@@ -421,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 165,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-09T00:11:22.125708",
-     "start_time": "2017-02-09T00:11:18.780052"
+     "end_time": "2017-02-09T00:58:16.015022",
+     "start_time": "2017-02-09T00:58:12.830424"
     },
     "collapsed": false
    },
@@ -436,11 +452,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 166,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-09T00:11:22.133545",
-     "start_time": "2017-02-09T00:11:22.127809"
+     "end_time": "2017-02-09T00:58:16.022586",
+     "start_time": "2017-02-09T00:58:16.017104"
     },
     "collapsed": false
    },
@@ -459,7 +475,7 @@
        " 'nodes': 874}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,43 +486,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 167,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-09T00:14:37.486979",
-     "start_time": "2017-02-09T00:14:37.468077"
+     "end_time": "2017-02-09T00:58:21.291674",
+     "start_time": "2017-02-09T00:58:16.024691"
+    },
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "for n in g.nodes_iter():\n",
+    "#     if get_hatchdate(int(n)) == None:\n",
+    "#         print(n)\n",
+    "    l.append(get_age(int(n), start_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:58:21.330194",
+     "start_time": "2017-02-09T00:58:21.295003"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "kcc = list(nx.community.k_clique_communities(g,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:58:23.363486",
+     "start_time": "2017-02-09T00:58:23.360032"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:58:24.391545",
+     "start_time": "2017-02-09T00:58:24.384781"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for e, group in enumerate(kcc):\n",
+    "    for g in group:\n",
+    "        a.append((e,g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:58:25.482566",
+     "start_time": "2017-02-09T00:58:25.477767"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfkcc = DataFrame(a, columns=[\"group\", \"bee\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:58:26.807073",
+     "start_time": "2017-02-09T00:58:26.296106"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dfkcc[\"age\"] = dfkcc.bee.apply(lambda x: get_age(int(x), start_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:59:08.607493",
+     "start_time": "2017-02-09T00:59:08.598709"
     },
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'hatchdates2016.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-72-a0e6816b9a8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes_iter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_hatchdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-69-126802d379ae>\u001b[0m in \u001b[0;36mget_hatchdate\u001b[0;34m(dec12)\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0;31m#  Input: integer (12 o'clock, clockwise)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0;31m# Output: date object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hatchdates2016.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m         \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'hatchdates2016.csv'"
-     ]
+     "data": {
+      "text/plain": [
+       "group\n",
+       "0      5.131601\n",
+       "1      0.547723\n",
+       "2      3.403430\n",
+       "3      0.957427\n",
+       "4      4.098780\n",
+       "5      5.066228\n",
+       "6      5.322906\n",
+       "7      5.984106\n",
+       "8      2.516611\n",
+       "9      1.726888\n",
+       "10     6.075909\n",
+       "11     5.500000\n",
+       "12     3.130495\n",
+       "13     3.862210\n",
+       "14     5.656854\n",
+       "15     2.387467\n",
+       "16     3.781534\n",
+       "17     2.500000\n",
+       "18     3.464102\n",
+       "19     0.500000\n",
+       "20     4.000000\n",
+       "21    10.115994\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for n in g.nodes_iter():\n",
-    "    print(get_hatchdate(n))"
+    "dfkcc.groupby(by=\"group\").age.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 174,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-09T00:11:42.841539",
-     "start_time": "2017-02-09T00:11:42.760749"
+     "end_time": "2017-02-09T00:58:29.772391",
+     "start_time": "2017-02-09T00:58:29.764627"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "group\n",
+       "0     7\n",
+       "1     5\n",
+       "2     4\n",
+       "3     4\n",
+       "4     5\n",
+       "5     4\n",
+       "6     7\n",
+       "7     7\n",
+       "8     4\n",
+       "9     8\n",
+       "10    4\n",
+       "11    4\n",
+       "12    5\n",
+       "13    4\n",
+       "14    4\n",
+       "15    5\n",
+       "16    5\n",
+       "17    4\n",
+       "18    4\n",
+       "19    4\n",
+       "20    4\n",
+       "21    4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfkcc.groupby(by=\"group\").size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:30:42.305108",
+     "start_time": "2017-02-09T00:30:42.224258"
     },
     "code_folding": [],
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -572,7 +790,10 @@
     "        reader = csv.reader(csvfile, delimiter=',')\t\t\n",
     "        for row in reader:\n",
     "            if dec12 == reader.line_num - 2:\n",
-    "                return str_to_datetime(row[2]).date()   \n",
+    "                if (str_to_datetime(row[2]) != None):\n",
+    "                    return str_to_datetime(row[2]).date()\n",
+    "                else:\n",
+    "                    return None\n",
     "    \n",
     "def str_to_datetime(string):\n",
     "    #  Input: string in format '%d.%m.%Y'\n",
@@ -587,6 +808,239 @@
     "    if date == None:\n",
     "        return ''\n",
     "    return date.strftime('%d.%m.%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:49:32.483991",
+     "start_time": "2017-02-09T00:49:32.480776"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Alter der Communities testen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:49:36.167557",
+     "start_time": "2017-02-09T00:49:36.140313"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "g0 = ig.Graph.Read_GraphML(\"test2016_0.99conf_160dist_6ilen.graphml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:49:36.919879",
+     "start_time": "2017-02-09T00:49:36.910985"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getCommunitiesFastGreedy(g):\n",
+    "\n",
+    "    fg = g.community_fastgreedy()\n",
+    "    vc = fg.as_clustering(fg.optimal_count)\n",
+    "\n",
+    "    membership = vc.membership\n",
+    "    ids = [[] for i in range(len(vc.sizes()))]\n",
+    "\n",
+    "    for name, membership in zip(g.vs, membership):\n",
+    "        ids[membership].append(int(name['id']))\n",
+    "\n",
+    "    return ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:49:50.662153",
+     "start_time": "2017-02-09T00:49:50.589804"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ccc =getCommunitiesFastGreedy(g0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:50:11.179213",
+     "start_time": "2017-02-09T00:50:11.173545"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[260, 96, 195, 21, 219, 20, 41, 16, 4, 2]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[len(x) for x in ccc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:50:57.923470",
+     "start_time": "2017-02-09T00:50:57.920094"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "b = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:51:00.962183",
+     "start_time": "2017-02-09T00:51:00.957685"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for e, group in enumerate(ccc):\n",
+    "    for g in group:\n",
+    "        b.append((e,g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:51:29.789891",
+     "start_time": "2017-02-09T00:51:29.784964"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dfccc = DataFrame(b, columns=[\"group\", \"bee\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:52:01.189479",
+     "start_time": "2017-02-09T00:51:54.973254"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dfccc[\"age\"] = dfccc.bee.apply(lambda x: get_age(int(x), start_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:56:03.387568",
+     "start_time": "2017-02-09T00:56:03.376601"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "group\n",
+       "0     7.925781\n",
+       "1    13.322917\n",
+       "2     9.973822\n",
+       "3     8.526316\n",
+       "4     8.552995\n",
+       "5    10.200000\n",
+       "6    10.658537\n",
+       "7    14.312500\n",
+       "8     4.500000\n",
+       "9     4.500000\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfccc.groupby(by=\"group\").age.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-09T00:52:29.543622",
+     "start_time": "2017-02-09T00:52:29.533740"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "group\n",
+       "0    260\n",
+       "1     96\n",
+       "2    195\n",
+       "3     21\n",
+       "4    219\n",
+       "5     20\n",
+       "6     41\n",
+       "7     16\n",
+       "8      4\n",
+       "9      2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfccc.groupby(by=\"group\").group.size()"
    ]
   },
   {
